# glucose_media_player_mac

./: README.md
.github/workflows/: release-mac.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/stores/: appStore.ts
src/routes/: +layout.svelte
src/routes/player/[videoPath]/: +page.svelte
